# VocalParse

./: .gitignore  README.md  README_CN.md  pyproject.toml
configs/: inference.yaml  preprocess.yaml  train.yaml
docs/: note_tokens.md
scripts/: preprocess.py
vocalparse/: __init__.py  api.py  checkpoint.py  data.py  demo.py  distributed.py  evaluation.py  inference.py  model.py  output.py  prompts.py  tokens.py  train.py  validation.py
