[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalparse"
version = "1.0.0"
description = "VocalParse: Unified Singing Voice Transcription with Large Audio Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "VocalParse Team" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "qwen-asr>=0.0.6",
  "transformers>=4.50",
  "accelerate>=1.12.0",
  "datasets>=4.6.1",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "pyarrow>=15.0.0",
  "matplotlib>=3.10.0",
  "tensorboard>=2.20.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.65.0",
  "numpy>=1.26.0",
  "safetensors>=0.4.0",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.8.0"]

[project.urls]
Homepage = "https://github.com/VocalParse/VocalParse"
Repository = "https://github.com/VocalParse/VocalParse"

[tool.setuptools]
packages = { find = { where = ["."], include = ["vocalparse*"] } }
